<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>github.magnusp</groupId>
		<artifactId>helidon-people</artifactId>
		<version>1.0-SNAPSHOT</version>
	</parent>

	<artifactId>implementation</artifactId>

	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>io.helidon.microprofile.bundles</groupId>
			<artifactId>helidon-microprofile-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
		</dependency>
		<dependency>
			<groupId>io.helidon.logging</groupId>
			<artifactId>helidon-logging-jul</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.smallrye</groupId>
			<artifactId>jandex</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.activation</groupId>
			<artifactId>jakarta.activation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.helidon.microprofile.testing</groupId>
			<artifactId>helidon-microprofile-testing-junit5</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-cdi-jakarta -->
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-cdi-jakarta</artifactId>
			<version>4.24.0</version>
		</dependency>

		<dependency>
			<groupId>io.helidon.integrations.cdi</groupId>
			<artifactId>helidon-integrations-cdi-datasource-hikaricp</artifactId>
			<scope>runtime</scope>
		</dependency>



		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14 -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.jooq/jooq -->
		<dependency>
			<groupId>org.jooq</groupId>
			<artifactId>jooq</artifactId>
			<version>3.18.7</version>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<!-- use 2.9.1 for Java 7 projects -->
			<version>3.11.1</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.testcontainers/postgresql -->
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>postgresql</artifactId>
			<version>1.19.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.7.0</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-libs</id>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.smallrye</groupId>
				<artifactId>jandex-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>make-index</id>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<systemPropertyVariables>
						<liquibase.shouldRun>false</liquibase.shouldRun>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
					<groupId>org.testcontainers</groupId>
					<artifactId>testcontainers-jooq-codegen-maven-plugin</artifactId>
					<version>0.0.3</version>

				<dependencies>
					<dependency>
						<groupId>org.testcontainers</groupId>
						<artifactId>postgresql</artifactId>
						<version>${testcontainers.version}</version>
					</dependency>
					<dependency>
						<groupId>org.postgresql</groupId>
						<artifactId>postgresql</artifactId>
						<version>${version.lib.postgresql}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>generate-jooq-sources</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<phase>generate-sources</phase>
						<configuration>
							<database>
								<type>POSTGRES</type>
								<containerImage>postgres:16</containerImage> <!-- optional -->
								<username>test</username> <!-- optional -->
								<password>test</password> <!-- optional -->
								<databaseName>test</databaseName> <!-- optional -->
							</database>
							<liquibase>
								<changeLogPath>src/main/resources/liquibase/changelog.xml</changeLogPath>
								<liquibaseSchemaName>public</liquibaseSchemaName>
								<defaultSchemaName>public</defaultSchemaName>
								<!-- or
							   <changeLogPath>db.changelog-root.xml</changeLogPath>
							   <changeLogDirectory>src/main/resources/db/changelog</changeLogPath>
							   -->
							</liquibase>

							<!-- Generator parameters -->
							<jooq>
								<generator>
									<database>
										<includes>.*</includes>
										<excludes>DATABASECHANGELOG</excludes>
										<inputSchema>public</inputSchema>
									</database>
									<target>
										<packageName>org.jooq.generated</packageName>
										<directory>target/generated-sources/jooq</directory>
									</target>
								</generator>
							</jooq>

						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
